@@ -22,6 +22,8 @@
     <File name="./Test.cs" subtype="Code" buildaction="Compile" />
     <File name="./Test/Examples" subtype="Directory" buildaction="Compile" />
     <File name="./Test/Examples/Accel.xml" subtype="Code" buildaction="Nothing" />
+    <File name="./MonoDocument.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Test/TestMonoDocument.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
